Finalized Poster Update page

--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,8 +1,9 @@
-Django (1.11.6)
+Django (1.11)
 django-multiselectfield (0.1.8)
+django-simple-autocomplete (1.11)
 olefile (0.44)
 Pillow (4.3.0)
 pip (9.0.1)
-pytz (2017.2)
+pytz (2018.3)
 setuptools (36.6.0)
 wheel (0.30.0)
